# vault-76

./: .gitignore  Benchmarks.ipynb  README.md  Untitled.ipynb  benchmark.py  hash-organizer.rs  hello  main  main.rs
entrance/: Cargo.toml
entrance/src/: convert_from_binary.rs  hash-sorter.rs  hash_generator.rs  hash_sorter.rs  lookup.rs  main.rs  microbenchmark.rs  print_records.rs  progress_tracker.rs  run.sh  run1.sh  run3.sh  run_benchmarks.sh  store-file.rs  store_file.rs  store_hashes.rs
entrance/src/benchmark/: 3d_plot.py  HDDLineGraph.py  bar.py  bar_graph_diff_programs.py  bar_graph_per_machine.py  check_lookup.py  check_memory.sh  check_times.sh  diff_threads.sh  generate3.sh  generate_and_lookup.sh  generate_multiple.sh  generate_once.sh  get_hash.py  lookup.sh  lookup_scatter_plot.ipynb  run_cargo-k25.sh  run_k25.sh  scatter.py  vault_bar_plot.ipynb
entrance/src/benchmark/gen_sort_csv/: vault76_torus_32_16t.csv  vault76_torus_32_1t.csv  vault76_torus_32_2t.csv  vault76_torus_32_4t.csv  vault76_torus_32_8t.csv  vault_25_16t.csv  vault_25_1t.csv  vault_25_2t.csv  vault_25_4t.csv  vault_25_8t.csv  vault_26_16t.csv  vault_26_1t.csv  vault_26_2t.csv  vault_26_4t.csv  vault_26_8t.csv  vault_27_16t.csv  vault_27_1t.csv  vault_27_2t.csv  vault_27_4t.csv  vault_27_8t.csv  vault_28_16t.csv  vault_28_1t.csv  vault_28_2t.csv  vault_28_4t.csv  vault_28_8t.csv  vault_29_16t.csv  vault_29_1t.csv  vault_29_2t.csv  vault_29_4t.csv  vault_29_8t.csv  vault_30_16t.csv  vault_30_1t.csv  vault_30_2t.csv  vault_30_4t.csv  vault_30_8t.csv
entrance/src/benchmark/lookup_csv/: lookup_25_12.csv  lookup_25_4.csv  lookup_25_6.csv  lookup_25_8.csv  lookup_30_12.csv  lookup_30_4.csv  lookup_30_8.csv
entrance/src/benchmark/stats/times/: times_25_16t.csv
entrance/src/benchmark/vault_csv/: 8s_128c.csv  8s_128c_k32.csv  epycbox_64c.csv  epycbox_64c_k32.csv  pi_4c.csv  vault-76-k25.csv  vault76_k25_athenaHDD.csv  vault76_k25_nvme.csv  vault76_k25_sata.csv  vault76_k27_torusNVME.csv  vault76_k32_8socket.csv  vault76_k32_torus.csv  vault_16t_25.csv  vault_1t_25.csv  vault_1t_26.csv  vault_2t_25.csv  vault_4t_25.csv  vault_8t_25.csv  vault_eightsocket_32_128t.csv
examples/: hello  hello.rs
testing/: lab  lab.rs
testing/plotting/: plots..py  plots.py
testing/tests/: unit_tests.rs
