[package]
name = "entrance"
version = "0.1.0"
authors = ["Varvara Bondarenko <varvara.bondarenko14@gmail.com>", "Renato Diaz <diazrenato2001@outlook.com>"]
description = "vault 76 codebase"
repository = "https://github.com/NrgNinja/vault-76"
readme = "README.md"
edition = "2021"

[dependencies]
clap = "3.1.6"
bincode = "1.3.3"
blake3 = "1.5.1"
hex = "0.4"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"], default-features = false }
rayon = "1.5.1"
indicatif = "0.17.8"
memmap2 = "0.9.4"
postcard = { version = "1.0.8", features = ["use-std"]}
heapless = "=0.7.17"
syscalls = "0.6.18"

[profile.release]
debug = false

[profile.dev.package."*"] # +
codegen-units = 1 # better optimizations
opt-level = 's'
