[package]
name = "entrance"
version = "0.1.0"
authors = ["Varvara Bondarenko <varvara.bondarenko14@gmail.com>", "Renato Diaz <diazrenato2001@outlook.com>"]
description = "vault 76 codebase"
repository = "https://github.com/NrgNinja/vault-76"
readme = "README.md"
edition = "2021"

[dependencies]
dashmap = {version = "6.0.1", features = ["rayon"]}
clap = "3.1.6"
bincode = "1.3.3"
blake3 = "1.5.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"], default-features = false } 
rayon = "1.5.1"
indicatif = "0.17.8"
libc = "0.2.155"
postcard = { version = "1.0.8", features = ["use-std"] }
heapless = "=0.7.17"
spdlog-rs = "0.3"
criterion = "0.5.1"

[profile.release]
debug = false

[profile.dev.package."*"] # +
codegen-units = 1 # better optimizations
opt-level = 's'
